fix(listbox): removed truncation and added whitespace:nowrap

--- a/src/less/listbox-button/listbox-button.less
+++ b/src/less/listbox-button/listbox-button.less
@@ -144,6 +144,8 @@ div.listbox-button__option--active[role="option"] {
 
 span.listbox-button__value {
     flex: 1 0 auto;
+
+    white-space: nowrap;
 }
 
 // https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/
